== Release 4.3.9.0

    * New: Bitwise variable operations (Unsigned)
    AND, OR, XOR, NOT, SHL, SHR, etc.

== Release 4.3.8.7

    * Fixed: Can't assign PWM pin because of empty PWM pins list #73

    * Fixed: When compiling ansic for arduino using REGISTER mcu,
    generated code includes "#", arduino does not compile (#72)

    * Added: For PIC16F886, PIC16F887 enabled pins:
    RE3(Input Only), RA7 (I/O when internal oscillator used), RA6 (I/O when internal oscillator used).

== Release 4.3.8.6

    * Fixed: Transliterate for non RU (#69). Fixes strange ANSIC output.

    * Fixed: pic10f200 pin number (#70)

    * Added: MOD (Integer Divide Remainder) operattion.

    * Wiki: PLC and safety
    https://github.com/LDmicro/LDmicro/wiki/PLC-and-safety

== Release 4.3.8.5

    * Fixed: PIC10F200 compile, issue #65

    * Fixed: PWM no longer possible on 16F628a, issue #61 (FAIL:Fixed in 4.3.8.7 #73)

== Release 4.3.8.4

    * Fixed: fix "Compile As" endless dialog show #60

    * Fixed: COMPILE AS does not work #59

== Release 4.3.8.3

    * Fixed: LDmicro goes into an endless loop if you try to display the dialog
    to set the DELAY delay when the mcu is not set to either AVR or PIC (#53)

    * Fixed: "Compile ANSIC" always generates a delay of 0 us no matter what
    delay value has been set for the DELAY instruction (#54)

    * Fixed: Some ArduinoPinName for ATmega2560

== Release 4.3.8.2

    * Hotfix: "Compile ANSIC" fails and LDmico exits with error dialogs when
      the CLRWDT instruction is used #49

== Release 4.3.8.1

    * Fixed: persist not execute #34
      INT_EEPROM_READ in AVR
      https://github.com/LDmicro/LDmicro/issues/34


== Release 4.3.8

    * Fixed: CTC counter set a size of var.

    * Fixed: ADC pin mapping for Arduino in ladder_.h.

    * Updated: SetBit, ClearBit, IfBitSet, IfBitClear.
      var must be a variable, not a literal value.
      The size of var must be from 1 to 4 bytes.