@@ -118,29 +118,29 @@ McuIoPinInfo AvrAtmega2560_100TQFPIoPinInfo[] = {
     { 'E',  0,  2, "PE0 (RXD0/PCINT8)",      0, "0; //RX" },
     { 'E',  1,  3, "PE1 (TXD0)",             0, "1; //TX" },
     { 'E',  2,  4, "PE2 (AIN0/XCK0)",        0, "" },
-    { 'E',  3,  5, "PE3 (AIN1/OC3A)",        0, "5" },
-    { 'E',  4,  6, "PE4 (INT4/OC3B)",        0, "2" },
-    { 'E',  5,  7, "PE5 (INT5/OC3C)",        0, "3" },
+    { 'E',  3,  5, "PE3 (AIN1/OC3A)",        0, "5; //PWM~" },
+    { 'E',  4,  6, "PE4 (INT4/OC3B)",        0, "2; //PWM~" },
+    { 'E',  5,  7, "PE5 (INT5/OC3C)",        0, "3; //PWM~" },
     { 'E',  6,  8, "PE6 (INT6/T3)",          0, "" },
     { 'E',  7,  9, "PE7 (INT7/CLKO/ICP3)",   0, "" },
 
     { 'H',  0, 12, "PH0 (RXD2)"            , 0, "17; //RX2" },
     { 'H',  1, 13, "PH1 (TXD2)"            , 0, "16; //TX2" },
     { 'H',  2, 14, "PH2 (XCK2)"            , 0, "" },
-    { 'H',  3, 15, "PH3 (OC4A)"            , 0, "6" },
-    { 'H',  4, 16, "PH4 (OC4B)"            , 0, "7" },
-    { 'H',  5, 17, "PH5 (OC4C)"            , 0, "8" },
-    { 'H',  6, 18, "PH6 (OC2B)"            , 0, "9" },
+    { 'H',  3, 15, "PH3 (OC4A)"            , 0, "6; //PWM~" },
+    { 'H',  4, 16, "PH4 (OC4B)"            , 0, "7; //PWM~" },
+    { 'H',  5, 17, "PH5 (OC4C)"            , 0, "8; //PWM~" },
+    { 'H',  6, 18, "PH6 (OC2B)"            , 0, "9; //PWM~" },
     { 'H',  7, 27, "PH7 (T4)"              , 0, "" },
 
     { 'B',  0, 19, "PB0 (PCINT0/_SS)"      , 0, "53" },
     { 'B',  1, 20, "PB1 (PCINT1/SCK)"      , 0, "52" },
     { 'B',  2, 21, "PB2 (PCINT2/MOSI)"     , 0, "51" },
     { 'B',  3, 22, "PB3 (PCINT3/MISO)"     , 0, "50" },
-    { 'B',  4, 23, "PB4 (PCINT4/OC2A)"     , 0, "10" },
-    { 'B',  5, 24, "PB5 (PCINT5/OC1A)"     , 0, "11" },
-    { 'B',  6, 25, "PB6 (PCINT6/OC1B)"     , 0, "12" },
-    { 'B',  7, 26, "PB7 (PCINT7/OC1C/OC0A)", 0, "13" },
+    { 'B',  4, 23, "PB4 (PCINT4/OC2A)"     , 0, "10; //PWM~" },
+    { 'B',  5, 24, "PB5 (PCINT5/OC1A)"     , 0, "11; //PWM~" },
+    { 'B',  6, 25, "PB6 (PCINT6/OC1B)"     , 0, "12; //PWM~" },
+    { 'B',  7, 26, "PB7 (PCINT7/OC1C/OC0A)", 0, "13; //PWM~" },
 
     { 'L',  0, 35, "PL0 (ICP4)"            , 0, "49" },
     { 'L',  1, 36, "PL1 (ICP5)"            , 0, "48" },
@@ -165,7 +165,7 @@ McuIoPinInfo AvrAtmega2560_100TQFPIoPinInfo[] = {
     { 'G',  2, 70, "PG2 (ALE)"             , 0, "39" },
     { 'G',  3, 28, "PG3 (TOSC2)"           , 0, "" },
     { 'G',  4, 29, "PG4 (TOSC1)"           , 0, "" },
-    { 'G',  5,  1, "PG5 (OC0B)"            , 0, "4" },
+    { 'G',  5,  1, "PG5 (OC0B)"            , 0, "4; //PWM~" },
 
     { 'C',  0, 53, "PC0 (A8)",               0, "37" },
     { 'C',  1, 54, "PC1 (A9)",               0, "36" },
@@ -518,18 +518,18 @@ McuIoPinInfo AvrAtmega8IoPinInfo[] = {
 McuIoPinInfo AvrAtmega328IoPinInfo[] = {
 //   port bit pin  pinName                 ArduinoPin  ArduinoName
 //                                                  X
-    { 'D',  0,  2, "PD0 (PCINT16 / RXD)"         ,  2, "0" },
-    { 'D',  1,  3, "PD1 (PCINT17 / TXD)"         ,  3, "1" },
+    { 'D',  0,  2, "PD0 (PCINT16 / RXD)"         ,  2, "0; //RX<-" },
+    { 'D',  1,  3, "PD1 (PCINT17 / TXD)"         ,  3, "1; //TX->" },
     { 'D',  2,  4, "PD2 (PCINT18 / INT0)"        ,  4, "2" },
-    { 'D',  3,  5, "PD3 (PCINT19 / OC2B / INT1)" ,  5, "3" },
+    { 'D',  3,  5, "PD3 (PCINT19 / OC2B / INT1)" ,  5, "3; //PWM~" },
     { 'D',  4,  6, "PD4 (PCINT20 / XCK / T0)"    ,  6, "4" },
-    { 'D',  5, 11, "PD5 (PCINT21 / OC0B / T1)"   , 11, "5" },
-    { 'D',  6, 12, "PD6 (PCINT22 / OC0A / AIN0)" , 12, "6" },
+    { 'D',  5, 11, "PD5 (PCINT21 / OC0B / T1)"   , 11, "5; //PWM~" },
+    { 'D',  6, 12, "PD6 (PCINT22 / OC0A / AIN0)" , 12, "6; //PWM~" },
     { 'D',  7, 13, "PD7 (PCINT23 / AIN1)"        , 13, "7" },
     { 'B',  0, 14, "PB0 (PCINT0 / CLKO / ICP1)"  , 14, "8" },
-    { 'B',  1, 15, "PB1 (OC1A / PCINT1)"         , 15, "9" },
-    { 'B',  2, 16, "PB2 (SS / OC1B / PCINT2)"    , 16, "10" },
-    { 'B',  3, 17, "PB3 (MOSI / OC2A / PCINT3)"  , 17, "11" },
+    { 'B',  1, 15, "PB1 (OC1A / PCINT1)"         , 15, "9; //PWM~" },
+    { 'B',  2, 16, "PB2 (SS / OC1B / PCINT2)"    , 16, "10; //PWM~" },
+    { 'B',  3, 17, "PB3 (MOSI / OC2A / PCINT3)"  , 17, "11; //PWM~" },
     { 'B',  4, 18, "PB4 (MISO / PCINT4)"         , 18, "12" },
     { 'B',  5, 19, "PB5 (SCK / PCINT5)"          , 19, "13" },
 //              7                                      VCC
